--- a/src/docs/asciidoc/asciidoc.adoc
+++ b/src/docs/asciidoc/asciidoc.adoc
@@ -2,19 +2,16 @@
 Doc Writer <bj.max.lim@gmail.com>
 {localdate}
 :my-doc: ../../../docs
-:kubernetes: {my-doc}/Kubernetes.adoc
 :release: {my-doc}/ReleaseNote.adoc
+:tech: {my-doc}/TechnicalStack.adoc
 :rest-api: {my-doc}/RestAPI.adoc
 
 This page give you full document of this project.
 
-== Techniques
-include::{release}[]
-
 '''
+
+include::{tech}[]
 
 include::{rest-api}[]
 
-'''
-
-include::{kubernetes}[]
+include::{release}[]
