--- a/docs/TechnicalStack.adoc
+++ b/docs/TechnicalStack.adoc
@@ -1,5 +1,6 @@
 :code-dir: ../src/main/java/bjdev/ShowItSelf
 :hateoas: {code-dir}/TechniqueCardProcessor.java
+:imagesdir: {docs-images-dir}
 
 == Technical Stack
 This session may give you why I selected these tech and how do they work.
@@ -134,3 +135,13 @@ Webpack is bundling tool. When you develop frontend, you may make many separated
 --
 WARNING: your port 80 must be opened.
 --
+
+=== HTTPS
+
+- HPPTS is secure HTTP. I needed a certificate to support https and I found Let's Encrypt project. It provides free certificate which can be refreshed for 90 days. I applied it to nginx which works for front-end stack. Although you access as http, it automatically redirect as https including Rest-API. Also I checked secure level at link:https://www.ssllabs.com/ssltest/[SSL Labs] which is recommended by certbot official site. My server offers you TLS1.3 and TLS1.2 only for security. See SSL Report as follow.
+
+image::ssl_report.jpg[]
+
+==== Certbot
+
+- It is very easy to apply https if you use certbot. It gets a certificate and applys to your server automatically. Since nginx docker image is based on debian 10, I followed nginx-debian10 instruction. See link:https://certbot.eff.org/[official certbot page].
